# baby-formula

./: pyproject.toml  test.py
baby_formula/: __init__.py  formula.py  tpl.py
baby_formula/templates/: form.html  inputs.html
formula/: formula.py  tpl.py
formula/templates/: form.html  inputs.html
static/: style.css
templates/: index.html
