[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baby-formula"
version = "0.1.9"
authors = [
  { name="Erik Bergsten", email="erikbergsten94@gmail.com" },
]
description = "A small form library for little babies"
requires-python = ">=3.8"
dependencies = [
  "fastapi[standard]",
  "jsonpath-ng",
  "jsonref",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["baby_formula"]

